# chong-7-nghiep

./: .gitignore  README.md
api-gateway/: Dockerfile  pom.xml
api-gateway/src/main/java/com/dan/: ApiGatewayApplication.java
api-gateway/src/main/java/com/dan/config/: AppConfig.java  SameSiteCookieFilter.java
api-gateway/src/main/java/com/dan/exception/: ErrorResponse.java  GlobalExceptionHandler.java  UnauthorizedException.java
api-gateway/src/main/java/com/dan/filter/: AuthenticationFilter.java  RouteValidator.java
api-gateway/src/main/resources/: application.yml
api-gateway/src/test/java/com/dan/api_gateway/: ApiGatewayApplicationTests.java
discovery-service/: pom.xml
discovery-service/src/main/java/com/dan/discovery_service/: DiscoveryServiceApplication.java
discovery-service/src/main/resources/: application.properties  application.yml
discovery-service/src/test/java/com/dan/discovery_service/: DiscoveryServiceApplicationTests.java
file-service/: pom.xml
file-service/src/main/java/com/dan/events/: EventController.java
file-service/src/main/java/com/dan/file_service/: FileServiceApplication.java
file-service/src/main/resources/: application.properties  application.yml
file-service/src/test/java/com/dan/file_service/: FileServiceApplicationTests.java
id-card-service/: .env.example  .gitignore  Dockerfile  README.md  index.html  pyproject.toml  requirements.txt  server.py
id-card-service/docs/: PHASE1_ENHANCED_PLAN.md  PROJECT_ARCHITECTURE.md
id-card-service/src/id_card_service/: main.py
id-card-service/src/id_card_service/api/: router.py  schemas.py
id-card-service/src/id_card_service/config/: settings.py
id-card-service/src/id_card_service/core/: __init__.py  face_detector.py  face_recognizer.py  model_manager.py  ocr_engine.py
id-card-service/src/id_card_service/core/auth/: jwt_service.py
id-card-service/src/id_card_service/core/kafka/: kafka_consumer.py
id-card-service/src/id_card_service/db/: mongodb.py
id-card-service/src/id_card_service/processors/: id_card_process.py  image_analyzer.py
id-card-service/src/id_card_service/utils/: id_card_utils.py  user_utils.py
identity-service/: pom.xml
identity-service/src/main/resources/: application.properties  application.yml
job-profile-service/: pom.xml
job-profile-service/src/main/resources/: application.properties  application.yml
job-service/: Dockerfile  pom.xml
job-service/src/main/resources/: application.properties  application.yml
recommend-service/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  server.py
recommend-service/cache/: jobs_model.pkl  semantic_jobs_cache.pkl
recommend-service/src/recommend_service/: main.py
recommend-service/src/recommend_service/api/: models.py  router.py
recommend-service/src/recommend_service/config/: settings.py
recommend-service/src/recommend_service/core/: singleton_services.py
recommend-service/src/recommend_service/core/auth/: jwt_service.py
recommend-service/src/recommend_service/core/kafka/: kafka_consumer.py
recommend-service/src/recommend_service/core/recommendation/models/: collaborative.py  content_based.py  hybrid.py  semantic_content_based.py
recommend-service/src/recommend_service/core/recommendation/services/: recommendation_service.py
recommend-service/src/recommend_service/db/: mongodb.py
recommend-service/src/recommend_service/utils/: category_utils.py  user_utils.py
searchAIID-service/: .env.example  README.md  main.py  pyproject.toml
searchAIID-service/src/searchaiid_service/api/: models.py  router.py
searchAIID-service/src/searchaiid_service/config/: settings.py
searchAIID-service/src/searchaiid_service/core/auth/: jwt_service.py
searchAIID-service/src/searchaiid_service/core/kafka/: kafka_service.py
searchAIID-service/src/searchaiid_service/core/ocr/: extractor.py
searchAIID-service/src/searchaiid_service/models/: lightweight_id_extractor.py  qrid_extractor.py  vintern.py
searchAIID-service/src/searchaiid_service/utils/: image_utils.py
(+232 files in other folders)
